// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders with active 1`] = `
<li
  className="ax-tabset__list-item ax-tabset__list-item--active ax-text--size-small ax-text--strong"
>
  <button
    className="ax-tabset__button"
  />
</li>
`;

exports[`Tab renders with defaultProps 1`] = `
<li
  className="ax-tabset__list-item ax-text--size-small ax-text--strong"
>
  <button
    className="ax-tabset__button"
  />
</li>
`;

exports[`Tab renders with disabled 1`] = `
<li
  className="ax-tabset__list-item ax-tabset__list-item--disabled ax-text--size-small ax-text--strong"
>
  <button
    className="ax-tabset__button"
    disabled={true}
  />
</li>
`;

exports[`Tab renders with title number 1`] = `
<li
  className="ax-tabset__list-item ax-text--size-small ax-text--strong"
  title={1000}
>
  <button
    className="ax-tabset__button"
  >
    1000
  </button>
</li>
`;

exports[`Tab renders with title react element 1`] = `
<li
  className="ax-tabset__list-item ax-text--size-small ax-text--strong"
  title={null}
>
  <button
    className="ax-tabset__button"
  >
    <span>
      Lorem Ipsum
    </span>
  </button>
</li>
`;

exports[`Tab renders with title string 1`] = `
<li
  className="ax-tabset__list-item ax-text--size-small ax-text--strong"
  title="Lorem ipsum"
>
  <button
    className="ax-tabset__button"
  >
    Lorem ipsum
  </button>
</li>
`;
